Gerace's method added (Blue band and Band ratios)

--- a/Methodology.tex
+++ b/Methodology.tex
@@ -657,9 +657,10 @@ A summary of the method developed by \cite{Gordon:1994} is described below.
 \end{enumerate}
 
 % ------------------------------
-\subsection{SeaWiFS Algorithm for Case 2 Water}\label{subsec:ruddick}
+\subsection{SeaWiFS Algorithm for Case 2 Water}
+\label{subsec:ruddick}
 
-The next atmospheric correction method is based in the method developed by \cite{Gordon:1994} for ocean color satellites (i.e. SeaWiFS, MODIS), and extended by \cite{Ruddick:2000bs} for use over turbid coastal and inland waters (Case 2) or high productive Case 1 waters (\S\ref{subsec:gordon}). As stated previously, the methods developed by \cite{Gordon:1994} assumes a zero water-leaving radiance for the NIR bands, which is not valid for highly turbid coastal and inland waters. Backscatter from particles in this waters could contribute to signal in the NIR bands, causing an over-estimation of the aerosol contribution and therefore an under-estimation of the water-leaving reflectances, even leading to negative values in the visible, which is not possible. 
+The next atmospheric correction method is based in the method developed by \cite{Gordon:1994} for ocean color satellites (\S\ref{subsec:gordon}), and extended by \cite{Ruddick:2000bs} for use over turbid coastal and inland waters (Case 2) or high productive Case 1 waters. As stated previously, the methods developed by \cite{Gordon:1994} assumes a zero water-leaving radiance for the NIR bands, which is not valid for highly turbid coastal and inland waters. Backscatter from particles in this waters could contribute to signal in the NIR bands, causing an over-estimation of the aerosol contribution and therefore an under-estimation of the water-leaving reflectances, even leading to negative values in the visible, which is not possible. 
 
 In order to overcome this problem, \cite{Ruddick:2000bs} replaced the black water assumption with two assumptions: the assumption of spatial homogeneity of the SeaWiFS's NIR bands ratio ($765:865-nm$) for aerosol reflectance and for water-leaving reflectance. These two ratios are used as calibration parameters after inspection of the Rayleigh-corrected reflectance scatterplot. The algorithm is described in more details below.
 
@@ -699,7 +700,7 @@ The process is summarized as follows:
 \begin{enumerate}[itemsep=2pt,parsep=2pt]
   \item Enter the atmospheric correction routine to produce a scatter plot of Rayleigh-corrected reflectances $\rho_c(\lambda_s)$ and $\rho_c(\lambda_l)$) for the ROI of study, and select the calibration parameter $\varepsilon_m(\lambda_s,\lambda_l)$. Set calibration parameter $\alpha$ equal to 1.72.
 
-  \item Reenter the atmospheric correction routine with $\rho_c(\lambda_s)$ and $\rho_c(\lambda_l)$ and use \autoref{eq:rhoams} and \autoref{eq:rhoams} to obtain $\rho_{am}(\lambda_s)$ and $\rho_{am}(\lambda_l)$, taking account of nonzero water-leaving reflectances.
+  \item Reenter the atmospheric correction routine with $\rho_c(\lambda_s)$ and $\rho_c(\lambda_l)$ and use \autoref{eq:rhoams} and \autoref{eq:rhoaml} to obtain $\rho_{am}(\lambda_s)$ and $\rho_{am}(\lambda_l)$, taking account of nonzero water-leaving reflectances.
 
   {\bf Note:} The following steps are the same as the standard algorithm described in \S\ref{subsec:gordon}.
 
@@ -719,13 +720,15 @@ The process is summarized as follows:
 % The second atmospheric correction method will be an extension of a method developed for SeaWiFS over turbid coastal and inland waters \cite{Ruddick:2000bs}. This method is a modified version of the methods developed by Gordon \cite{Gordon:1997} for ocean color satellites, but when the signal leaving the water does contribute to the overall signal beyond the NIR part of the spectrum. By using longer wavelengths and restricting the input pixels to open waters, these methods can be  applied to many fresh and coastal regions. The water surface reflectance values obtained after atmospheric correction will be validated through comparison to water surface reflectance measured in situ. 
 
 % ------------------------------
-\subsection{SWIR bands Atmospheric Correction}\label{subsec:wang}
+\subsection{SWIR bands Atmospheric Correction}
+\label{subsec:wang}
 
 For Case 2 or high productive Case 1 waters, especially turbid waters, there is a significant contribution from the water-leaving radiance and hence the zero water-leaving assumption in the NIR bands is not valid anymore. This is often the case in inland and coastal waters and therefore the NIR bands cannot be used to atmospherically correct this kind of imagery. However, these kinds of waters are indeed black in the shortwave infrared (SWIR) bands ($\geq 1000nm$) due to stronger water absorption. So, we can use the same atmospheric correction procedure used for SeaWiFS and MODIS but replacing the NIR bands with the two OLI's SWIR band ($1690$ and $2200nm$) for the data processing, as suggested by \cite{Wang:2007,Wang:2005}. \cite{Wang:2007} evaluated different combinations of the MODIS' SWIR bands to atmospherically correct a specific study image and compared the results with the traditional algorithm (NIR bands). Actually, the latest MODIS atmospheric algorithm uses a NIR-SWIR combined atmospheric correction approach that uses the NIR bands for Case 1 non-high productive water and the SWIR bands for Case 2 or high productive Case 1 waters, and a turbidity index to decide when to use them (\cite{Wang:2007dz}). 
 
 % ------------------------------
 \subsection{OLI Algorithm for Case 2 Waters (Blue Band)}
-\cite{GeraceThesis} proposed to use a combination of spectral matching and band ratio techniques (method developed by \cite{Gordon:1997}) to atmospherically correct OLI data over Case 2 waters. A requirement to use band ratio technique for atmospherically correct OLI data is $\varepsilon^{(1,6)}\cong constant$, or in other words the ratio of reflectance from OLI's band 1 (coastal band) and band 6 (SWIR 1 band) should be approximately constant for all water pixels in the region of interest. Due to variability in band 1, the previous requirement is not always true. However, this variability can be accounted using spectral matching. This method needs to be applied with caution as it will not work in highly turbid water due to high variability in band 1. Therefore, an {\it a priori} analysis of the band histogram is needed, and only the bands whose histogram has little spread and resemble a normal distribution should be used.
+\index{atmospheric correction!Gerace's blue band}
+\cite{GeraceThesis} proposed to use a combination of spectral matching and band ratio techniques (method developed by \cite{Gordon:1994}) to atmospherically correct OLI data over Case 2 waters. A requirement to use this technique for atmospherically correct OLI data is $\varepsilon^{(1,6)}\cong constant$, or in other words the ratio of reflectance from OLI's band 1 (coastal band) and band 6 (SWIR 1 band) should be approximately constant for all water pixels in the region of interest. Due to variability in band 1, the previous requirement is not always true. However, this variability can be accounted using spectral matching. This method needs to be applied with caution as it will not work in highly turbid water due to high variability in band 1. Therefore, an {\it a priori} analysis of the band histogram is needed, and only the bands whose histogram has little spread and resemble a normal distribution should be used \cite{GeraceThesis}.
 
 This method first uses a forwarding modeling to create a three dimensional (3-D) LUT. Then, it adds atmospheric visibility as a fourth dimension (4-D). First, a 3-D LUT is created using Hydrolight. The dimensions are concentration of chlorophyll-{\it a}, suspended particles and CDOM. The range of the LUT is made up of spectral water-leaving reflectances. Then, this 3-D reflectance LUT is propagated to the TOA using MODTRAN for a range of visibilities. Therefore, the 4-D LUT will be made up of the independent variables chlorophyll-{\it a}, suspended particles, CDOM and visibility, while the range will be made up of spectral sensor-reaching radiances. A diagram showing the concept of this 4-D LUT is shown in \autoref{fig:4DLUT}. Note that this approach requires some knowledge of the aerosol type (e.g. rural, urban, maritime, etc.). Furthermore, the sensor-reaching radiances should be spectrally sampled by the OLI's sensor response and the data from the image should corrected for glint effect before comparing with the 4-D LUT since it does not include this effect.
 
@@ -740,7 +743,7 @@ Once the 4-D LUT has been created, an iterative search of the closest match to a
 
 After estimating the initial visibility, an optimization routine can be used to estimate the four parameters from the 4-D LUT by interpolation. The final result of this process are interpolated CPA's concentration and visibility associated with the imaged pixel.
 
-\cite{GeraceThesis} suggests using an average of all visibility solutions obtained previously as a fixed visibility and repeat the estimation described above with this fixed visibility. This is because the atmosphere should not have a high variability in the scene and therefore be approximately constant over the study region.
+\cite{GeraceThesis} suggested using an average of all visibility solutions obtained previously as a fixed visibility and repeat the estimation described above with this fixed visibility. This is because the atmosphere should not have a high variability in the scene and therefore be approximately constant over the study region.
 
 A summary of this process is described below.
 
@@ -755,6 +758,7 @@ Enter the algorithm with glint corrected data:\\
 
 % ------------------------------
 \subsection{OLI Algorithm for Case 2 Waters (Band Ratios)}
+\index{atmospheric correction!Gerace's band ratios}
 Another algorithm suggested by \cite{GeraceThesis} uses the concept adopted by \cite{Ruddick:2000bs}, but using OLI's NIR (band 5) and SWIR 1 (band 6) bands instead of the two NIR bands used for SeaWiFS. This algorithm utilizes the concept of band ratios (using the epsilon ratio values) in its implementation for calculating the reflectance due to aerosol in the scene. Recall from \cite{Ruddick:2000bs} that we would like $\varepsilon^{(i,j)}$ to be constant over the region of interest, for some band $i$ and band $j$. 
 
 For this algorithm specifically, the requirement should be $\varepsilon^{(5,6)}\cong constant$. If this is the case for any two band in the scene, then a band ratio technique (\S\ref{subsec:gordon}, \S\ref{subsec:ruddick} and \S\ref{subsec:wang}) can be used to solve for $\rho_w$ in \autoref{eq:rhoam}. However, the requirement of $\varepsilon^{(5,6)}\cong constant$ could not be true for turbid waters because there are some signal coming from the water in the NIR and not only from the atmosphere, i.e. $\rho_w^{(5)}\neq0$. This fact produces variability in the water reflectance in band 5. Therefore, simply calculating $\varepsilon^{(5,6)}$ will result in a misrepresentation of the atmosphere and the water signal. A solution to this problem is to select the signal in band 5 (NIR band; $862nm$) from a region of dark waters, and make the black pixel assumption in the band 6. This will allow to calculate $\varepsilon^{(5,6)}$ over a dark water and therefore determine its atmosphere signal, i.e. the \cite{Ruddick:2000bs} approach adapted to the SWIR region. Then, the whole water scene is assumed to have the chosen atmosphere, the image is atmospherically correct for that atmosphere. The details of this algorithm are similar to the ones described in \cite{Ruddick:2000bs} (see \S\ref{subsec:ruddick}), and summarized below.
