--- a/javier_bibPhD.bib
+++ b/javier_bibPhD.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Javier Concha First at 2015-10-15 17:23:16 -0400 
+%% Created for Javier Concha First at 2015-10-16 00:35:15 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -1333,11 +1333,12 @@ The most interaction between humankind and water occurs in coastal and inland wa
 	Title = {The Application of Fluorescence Spectroscopy in the Mercury Ion Detection},
 	Year = {2011}}
 
-@unpublished{unknown,
+@webpage{unknown,
 	Date-Added = {2012-12-11 07:28:27 +0000},
-	Date-Modified = {2012-12-12 21:43:49 +0000},
+	Date-Modified = {2015-10-16 04:34:40 +0000},
 	Note = {\url{http://pharmaxchange.info/press/2012/04/ultraviolet-visible-uv-vis-spectroscopy-%E2%80%93-derivation-of-beer-lambert-law/}},
-	Title = {Ultraviolet-Visible (UV-Vis) Spectroscopy -- Derivation of Beer-Lambert Law}}
+	Title = {Ultraviolet-Visible (UV-Vis) Spectroscopy -- Derivation of Beer-Lambert Law},
+	Url = {http://pharmaxchange.info/press/2012/04/ultraviolet-visible-uv-vis-spectroscopy-%E2%80%93-derivation-of-beer-lambert-law/}}
 
 @article{Preisendorfer1961,
 	Author = {R. W. Preisendorfer},
@@ -1383,12 +1384,13 @@ The most interaction between humankind and water occurs in coastal and inland wa
 	Note = {\url{http://www.photronlamp.com/.assets/brochures/deuterium\_lamp.pdf}},
 	Title = {Deuterium Lamps}}
 
-@unpublished{Zeiss,
+@webpage{Zeiss,
 	Author = {Zeiss},
 	Date-Added = {2012-12-06 17:50:23 +0000},
-	Date-Modified = {2012-12-11 05:43:35 +0000},
+	Date-Modified = {2015-10-16 04:35:07 +0000},
 	Note = {\url{http://zeiss-campus.magnet.fsu.edu/articles/lightsources/tungstenhalogen.html}},
-	Title = {Tungsten-Halogen Incendescent Lamps}}
+	Title = {Tungsten-Halogen Incendescent Lamps},
+	Url = {http://zeiss-campus.magnet.fsu.edu/articles/lightsources/tungstenhalogen.html}}
 
 @unpublished{SpectroDiagram,
 	Author = {Concordia Analytical Instrument Laboratory, Concordia College.},
