--- a/Methodology.tex
+++ b/Methodology.tex
@@ -761,7 +761,7 @@ Enter the algorithm with glint corrected data:\\
 \index{atmospheric correction!Gerace's band ratios}
 Another algorithm suggested by \cite{GeraceThesis} uses the concept adopted by \cite{Ruddick:2000bs}, but using OLI's NIR (band 5) and SWIR 1 (band 6) bands instead of the two NIR bands used for SeaWiFS. This algorithm utilizes the concept of band ratios (using the epsilon ratio values) in its implementation for calculating the reflectance due to aerosol in the scene. Recall from \cite{Ruddick:2000bs} that we would like $\varepsilon^{(i,j)}$ to be constant over the region of interest, for some band $i$ and band $j$. 
 
-For this algorithm specifically, the requirement should be $\varepsilon^{(5,6)}\cong constant$. If this is the case for any two band in the scene, then a band ratio technique (\S\ref{subsec:gordon}, \S\ref{subsec:ruddick} and \S\ref{subsec:wang}) can be used to solve for $\rho_w$ in \autoref{eq:rhoam}. However, the requirement of $\varepsilon^{(5,6)}\cong constant$ could not be true for turbid waters because there are some signal coming from the water in the NIR and not only from the atmosphere, i.e. $\rho_w^{(5)}\neq0$. This fact produces variability in the water reflectance in band 5. Therefore, simply calculating $\varepsilon^{(5,6)}$ will result in a misrepresentation of the atmosphere and the water signal. A solution to this problem is to select the signal in band 5 (NIR band; $862nm$) from a region of dark waters, and make the black pixel assumption in the band 6. This will allow to calculate $\varepsilon^{(5,6)}$ over a dark water and therefore determine its atmosphere signal, i.e. the \cite{Ruddick:2000bs} approach adapted to the SWIR region. Then, the whole water scene is assumed to have the chosen atmosphere, the image is atmospherically correct for that atmosphere. The details of this algorithm are similar to the ones described in \cite{Ruddick:2000bs} (see \S\ref{subsec:ruddick}), and summarized below.
+For this algorithm specifically, the requirement should be $\varepsilon^{(5,6)}\cong constant$. If this is the case for any two bands in the scene, then a band ratio technique (\S\ref{subsec:gordon}, \S\ref{subsec:ruddick} and \S\ref{subsec:wang}) can be used to solve for $\rho_w$ in \autoref{eq:rhoam}. However, the requirement of $\varepsilon^{(5,6)}\cong constant$ could not be true for turbid waters because there are some signal coming from the water in the NIR and not only from the atmosphere, i.e. $\rho_w^{(5)}\neq0$. This fact produces variability in the water reflectance in band 5. Therefore, simply calculating $\varepsilon^{(5,6)}$ will result in a misrepresentation of the atmosphere and the water signal. A solution to this problem is to select the signal in band 5 (NIR band; $862nm$) from a region of dark waters, and make the black pixel assumption in the band 6. This will allow to calculate $\varepsilon^{(5,6)}$ over a dark water and therefore determine its atmosphere signal, i.e. the \cite{Ruddick:2000bs} approach adapted to the SWIR region. Then, the whole water scene is assumed to have the chosen atmosphere, the image is atmospherically correct for that atmosphere. The details of this algorithm are similar to the ones described in \cite{Ruddick:2000bs} (see \S\ref{subsec:ruddick}), and summarized below.
 
 \noindent{\bf Summary:}
 Enter the algorithm with glint corrected data:\\
@@ -775,7 +775,7 @@ Enter the algorithm with glint corrected data:\\
 % @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 \section{In-Water Constituent Retrieval Process}
 \label{sec:retrieval}
-The retrieval algorithm will be based on previous work done by Gerace {\it et al.} \cite{Gerace:2013} and Raqueno {\it et al.} \cite{Raqueno:2000}. The water surface reflectance product obtained after atmospheric correction from the previous stage is used as input to the retrieval algorithm. Each pixel in the reflectance product has an unknown concentration. A spectral matching technique is applied to predict this concentration by comparing the spectral shape of each pixel with the elements in a look-up table (LUT). The complete retrieval process will be explained in the following sections. 
+The retrieval algorithm will be based on previous work done by \cite{Raqueno:2000}, \cite{Gerace:2013} and \cite{Concha2013IGARSS}. The water surface reflectance product obtained after atmospheric correction from the previous stage is used as input to the retrieval algorithm. Each pixel in the reflectance product has an unknown concentration. A spectral matching technique is applied to predict this concentration by comparing the spectral shape of each pixel with the elements in a look-up table (LUT). The complete retrieval process will be explained in the following sections. 
 
 Additionally, this study presents a comparison of chlorophyll-{\it a} concentrations ($C_a$) retrieved from the standard atmospheric correction algorithms and from the MoB-ELM algorithms. The NASA's standard bio-optical algorithms OC2, OC3, OC4\cite{OReilly2000} and OCI\cite{Hu:2012} for the retrieval of chlorophyll-{\it a} were developed mainly for Case 1 waters, where the main driver is chlorophyll-{\it a}. The {\it in situ} data used to develop these algorithms does not appear to contain enough data for high concentration of color producing agents (CPAs; chlorophyll-{\it a}, minerals (or total suspended matter or TSS), and colored dissolved organic matter (CDOM)), and therefore these data are not fully representative of Case 2 waters. Gerace {\it et al.} (2013)\cite{Gerace:2013} developed an algorithm for the simultaneous retrieval of color producing agents (CPAs) based on spectral matching and a look-up table (LUT) using simulated OLI data. Concha and Schott (2014)\cite{Concha2013IGARSS} extended Gerace's approach to actual OLI data. This approach does not depend on a global {\it in situ} dataset. Instead it builds a LUT specific to the inherent optical properties (IOPs) and observation conditions for the site.
 % -------------------------------------
