--- a/javier_bibPhD.bib
+++ b/javier_bibPhD.bib
@@ -2,12 +2,49 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Javier Concha First at 2015-10-16 00:35:15 -0400 
+%% Created for Javier Concha First at 2015-10-16 14:41:50 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Ritchie:2008eu,
+	Author = {Ritchie, R. J. },
+	Booktitle = {Photosynthetica},
+	Da = {2008/03/01},
+	Date-Added = {2015-10-16 18:39:09 +0000},
+	Date-Modified = {2015-10-16 18:41:05 +0000},
+	Doi = {10.1007/s11099-008-0019-7},
+	Isbn = {0300-3604},
+	J2 = {Photosynthetica},
+	La = {English},
+	Number = {1},
+	Pages = {115-126},
+	Publisher = {Springer Netherlands},
+	Title = {Universal chlorophyll equations for estimating chlorophylls a, b, c, and d and total chlorophylls in natural assemblages of photosynthetic organisms using acetone, methanol, or ethanol solvents},
+	Ty = {JOUR},
+	Url = {http://dx.doi.org/10.1007/s11099-008-0019-7},
+	Volume = {46},
+	Year = {2008},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1007/s11099-008-0019-7}}
+
+@article{Lorenzen:1967fk,
+	Author = {Lorenzen, Carl J. },
+	Date-Added = {2015-10-16 18:25:56 +0000},
+	Date-Modified = {2015-10-16 18:29:18 +0000},
+	Doi = {10.4319/lo.1967.12.2.0343},
+	Isbn = {1939-5590},
+	Journal = {Limnology and Oceanography},
+	Journal1 = {Limnol. Oceanogr.},
+	Number = {2},
+	Pages = {343--346},
+	Title = {Determination of chlorophyll and pheo-pigment: spectrophotometric equations},
+	Ty = {Journal},
+	Url = {http://dx.doi.org/10.4319/lo.1967.12.2.0343},
+	Volume = {12},
+	Year = {1967},
+	Bdsk-Url-1 = {http://dx.doi.org/10.4319/lo.1967.12.2.0343}}
 
 @article{Lee_Du_Arnone2005,
 	Author = {Lee, Z. P. and Du, K. P. and Arnone, R.},
